<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/overall_padding_25dp"
    tools:context=".memories.CreateMemory">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_height_180dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_text_background" />

    <EditText
        android:id="@+id/editTextTextCaption"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_photo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto" />

    <EditText
        android:id="@+id/editTextDescription"
        style="@style/edit_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/image_discription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextCaption" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10dp"
        android:text="@string/submit_text"
        android:textSize="@dimen/text_size_16sp"
        app:cornerRadius="@dimen/corner_radious_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="51dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPhoto"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPhoto"
        app:layout_constraintStart_toStartOf="@+id/imageViewPhoto"
        app:layout_constraintTop_toTopOf="@+id/imageViewPhoto"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>